Closed
Bug 302000
Opened 21 years ago
Closed 20 years ago
browser.search.order.* doesn't work with searchplugins stored in profile
Categories
(Firefox :: Search, defect)
Tracking
()
RESOLVED
FIXED
People
(Reporter: arno, Assigned: torisugari)
Details
Attachments
(1 file)
|
1.53 KB,
patch
|
benjamin
:
review+
neil
:
superreview+
asa
:
approval1.8b5-
|
Details | Diff | Splinter Review |
User-Agent: Mozilla/5.0 (X11; U; Linux i686; en-US; rv:1.8b3) Gecko/20050712 Firefox/1.0+
Build Identifier: Mozilla/5.0 (X11; U; Linux i686; en-US; rv:1.8b3) Gecko/20050712 Firefox/1.0+
with deer park alpha 2,
the searchplugins can be stored in the profile.
But when I play with the browser.search.order.* entries in about:config, thoses
searchplugins are not sorted in the searchbar
deer park can sort the searchplugins that are stored in the program but not the
ones stored in the profile.
Reproducible: Always
Expected Results:
browser.search.order.* should manage all the searchplugins (the ones in the
program dir and the ones in the profile dir)
Updated•21 years ago
|
Status: UNCONFIRMED → NEW
Ever confirmed: true
OS: Linux → All
Version: unspecified → Trunk
Comment 1•21 years ago
|
||
Mozilla/5.0 (X11; U; Linux i686; en-US; rv:1.8b4) Gecko/20050805 Firefox/1.0+
ID:2005080513
Works for me. Changing browser.search.order.1 to Answers.com (or the respective
name of the search engine) and restarting Firefox made it appear at the top of
the list.
Status: NEW → RESOLVED
Closed: 21 years ago
Resolution: --- → WORKSFORME
Comment 2•21 years ago
|
||
Mozilla/5.0 (Windows; U; Windows NT 5.1; en-US; rv:1.8b3) Gecko/20050712
Firefox/1.0+
Same problem under Windows XP. Works for searchplugins stored in installation
directory, but not for thoose in the profile. I think the bug should be reopened.
I'm also seeing this bug.
Mozilla/5.0 (Windows; U; Windows NT 5.1; en-US; rv:1.8b4) Gecko/20050906
Firefox/1.4 - Build ID: 2005090605
This is with *all* searchplugins in the profile and an empty searchplugins
directory in the installation directory. The bug is also present when the entire
searchplugins directory is deleted from the installation directory rather than
just emptied.
This needs reopening.
Comment 4•20 years ago
|
||
Mozilla/5.0 (Windows; U; Windows NT 5.1; en-US; rv:1.8b4) Gecko/20050906 Firefox/1.4
Yeah, I can confirm this on XP, but not on Linux. This issue exists both on
branch and trunk.
Severity: normal → minor
Status: RESOLVED → REOPENED
OS: All → Windows XP
Resolution: WORKSFORME → ---
| Assignee | ||
Comment 5•20 years ago
|
||
| Assignee | ||
Updated•20 years ago
|
Assignee: nobody → torisugari
Status: REOPENED → ASSIGNED
| Assignee | ||
Updated•20 years ago
|
Attachment #197944 -
Attachment is obsolete: true
| Assignee | ||
Comment 6•20 years ago
|
||
Comment on attachment 197944 [details] [diff] [review]
Patch
Calling ReorderEngineList() at the end of all GetSearchEngineList(...)
Attachment #197944 -
Attachment is obsolete: false
Attachment #197944 -
Flags: review?(benjamin)
Updated•20 years ago
|
Attachment #197944 -
Flags: review?(benjamin) → review+
| Assignee | ||
Updated•20 years ago
|
Attachment #197944 -
Flags: superreview?(neil.parkwaycc.co.uk)
Attachment #197944 -
Flags: approval1.8b5?
Comment 7•20 years ago
|
||
Comment on attachment 197944 [details] [diff] [review]
Patch
too late to take risk into beta. Let's look at getting this for 1.5.1
Attachment #197944 -
Flags: approval1.8b5? → approval1.8b5-
Updated•20 years ago
|
Attachment #197944 -
Flags: superreview?(neil.parkwaycc.co.uk) → superreview+
Comment 8•20 years ago
|
||
Checking in mozilla/xpfe/components/search/src/nsInternetSearchService.cpp;
/cvsroot/mozilla/xpfe/components/search/src/nsInternetSearchService.cpp,v <--
nsInternetSearchService.cpp
new revision: 1.240; previous revision: 1.239
done
Status: ASSIGNED → RESOLVED
Closed: 21 years ago → 20 years ago
Resolution: --- → FIXED
Has this been checked into branch as well, but not marked fixed1.8?
Cos browser.search.order is working fine here with all searchplugins in the
profile, on:
Mozilla/5.0 (Windows; U; Windows NT 5.1; en-US; rv:1.8b5) Gecko/20051021
Firefox/1.5 - Build ID: 2005102105
| Assignee | ||
Comment 10•20 years ago
|
||
(In reply to comment #9)
> Has this been checked into branch as well, but not marked fixed1.8?
>
> Cos browser.search.order is working fine here with all searchplugins in the
> profile, on:
>
> Mozilla/5.0 (Windows; U; Windows NT 5.1; en-US; rv:1.8b5) Gecko/20051021
> Firefox/1.5 - Build ID: 2005102105
Are you sure? I can still reproduce it with 1.8 branch build.
Mozilla/5.0 (Windows; U; Windows NT 5.0; en-US; rv:1.8b5)
Gecko/20051021 Firefox/1.5
Comment 11•20 years ago
|
||
(In reply to comment #10)
> (In reply to comment #9)
> > Has this been checked into branch as well, but not marked fixed1.8?
> >
> > Cos browser.search.order is working fine here with all searchplugins in the
> > profile, on:
> >
> > Mozilla/5.0 (Windows; U; Windows NT 5.1; en-US; rv:1.8b5) Gecko/20051021
> > Firefox/1.5 - Build ID: 2005102105
>
> Are you sure? I can still reproduce it with 1.8 branch build.
>
> Mozilla/5.0 (Windows; U; Windows NT 5.0; en-US; rv:1.8b5)
> Gecko/20051021 Firefox/1.5
Yeah, absolutely. Confused as to why, but certain!
You need to log in
before you can comment on or make changes to this bug.
Description
•