Bug 302000 - browser.search.order.* doesn't work with searchplugins stored in profile. patch from O. Atsushi (Torisugari) <torisugari@gmail.com>, r=bsmedberg, sr=neil.